--- a/stash.yaml
+++ b/stash.yaml
@@ -1,7 +1,9 @@
-- name: Lucky Defense
-  type: select
-    proxies:
-      - ☑️ 手动切换
+proxy-groups：
+  - name: Lucky Defense
+    type: select
+      proxies:
+        - ☑️ 手动切换
+
 # 规则集声明（加到 rule-providers 下）
 rule-providers:
   cloudflare-domain:
