--- a/stash.yaml
+++ b/stash.yaml
@@ -71,15 +71,11 @@ rules:
   - IP-CIDR6,2c0f:f248::/32,DIRECT,no-resolve
 
 # 你的自定义规则（保留原有代理组指向，无缝衔接）
-  - DOMAIN-SUFFIX,exitgames.com,Lucky Defense
-  - DOMAIN-SUFFIX,photonengine.com,Lucky Defense
+  - DOMAIN-SUFFIX,exitgames.com,DIRECT
+  - DOMAIN-SUFFIX,photonengine.com,DIRECT
+  - DOMAIN-SUFFIX,111percent.net,DIRECT
+  - IPCIDR,45.67.211.0/24,DIRECT
   - DOMAIN,configure-tcp-ios.mtgglobals.com,🔰 节点选择
   - DOMAIN-SUFFIX,8am.cc.cd,DIRECT
 
-# 保留你的代理组配置（无缩进/语法错误）
-proxy-groups:
-  - name: Lucky Defense
-    type: select
-    proxies:
-      - 🔰 节点选择
 
